crates/whiphand-tui/tests/snapshots/snapshots__detail_events_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                                                                                                                                         "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇ whiphand/checkout                                                                                                      "
"                                                                                                                                                                                                        "
"┌ Steps ───────────────────────────────────────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                              ││ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                  ││10:00:00 run:start            -              run started: workflow 'feature', source project                                  │"
"│    ● execute ×2                                                      ││10:00:00 step:start           plan           step started (agent, runner=claude, mode=interactive)                            │"
"│    ○ tests ×2                                                        ││10:01:10 step:done            plan           done, exit code 0                                                                │"
"│  ○ sign-off                                                          ││10:01:10 loop:start           -              loop 'fix-cycle' started, up to 3 iteration(s)                                   │"
"│                                                                      ││10:01:10 step:start           execute        step started (agent, runner=claude, mode=headless)                               │"
"│                                                                      ││10:02:00 step:progress:tool   execute        Edit src/cart.ts                                                                 │"
"│                                                                      ││10:02:30 step:start           tests          step started (command)                                                           │"
"│                                                                      ││10:02:32 step:done            tests          done, exit code 1                                                                │"
"│                                                                      ││10:03:00 step:start           execute        step started (agent, runner=claude, mode=headless)                               │"
"│                                                                      ││10:04:00 step:progress:text   execute        Rounding with Math.round(x * 100) / 100 now.                                     │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  e errors only  ·  a every step's rows  ·  o open the artifact in $PAGER  ·  D git diff in a terminal  ·  r reload the diff  ·  ? help "
