crates/whiphand-tui/tests/snapshots/snapshots__detail_foreign_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                                                                                                                                         "
"20261010-095500-c3d4  cycle  running  9m 30s                                                                                                                                                            "
"owned by another whiphand process: read-only, refreshed every second                                                                                                                                    "
"┌ Steps ───────────────────────────────────────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                              ││ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                                                                      │"
"│  ● fix-cycle                                                         ││earlier lines in run.log: scroll up                                                                                           │"
"│                                                                      ││10:00:00 -              run started: workflow 'feature', source project                                                       │"
"│                                                                      ││10:00:00 plan           step started (agent, runner=claude, mode=interactive)                                                 │"
"│                                                                      ││10:01:10 plan           done, exit code 0                                                                                     │"
"│                                                                      ││10:01:10 -              loop 'fix-cycle' started, up to 3 iteration(s)                                                        │"
"│                                                                      ││10:01:10 execute        step started (agent, runner=claude, mode=headless)                                                    │"
"│                                                                      ││10:02:00 execute        Edit src/cart.ts                                                                                      │"
"│                                                                      ││10:02:30 tests          step started (command)                                                                                │"
"│                                                                      ││10:02:31 tests          ✓ 41 passed                                                                                           │"
"│                                                                      ││10:02:31 tests          ✗ cart totals round to cents                                                                          │"
"│                                                                      ││10:02:32 tests          done, exit code 1                                                                                     │"
"│                                                                      ││10:03:00 execute        step started (agent, runner=claude, mode=headless)                                                    │"
"│                                                                      ││10:04:00 execute        Rounding with Math.round(x * 100) / 100 now.                                                          │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  f errors only  ·  A every step's rows  ·  o open the artifact in $PAGER  ·  D git diff in a terminal  ·  Ctrl-r reload the diff  ·  c "
